--- a/index.html
+++ b/index.html
@@ -138,5 +138,6 @@
     <audio id="voicemail-sound" src="assets/sounds/voicemail-sound.mp3"></audio>
 
     <script type="module" src="main.js"></script>
+    <div id="fade-overlay"></div>
 </body>
 </html>
